# scrcpy

./: meson.build
app/: Info.plist.in  fix_libs.py  meson.build  post_bundle.sh
app/data/: arrow-tip.h
app/src/: display.c  display.h  input_events.h  input_manager.c  input_manager.h  keymap.c  keymap.h  main.c  metal.h  mouse_sdk.c  scrcpy.c  screen.c  screen.h  server.c  sidebar.c  sidebar.h  tinyfiledialogs.h
server/: meson.build
